style: fix z-index and use rem

--- a/static/client/components/Views/FilterTableView/_FilterTableView.scss
+++ b/static/client/components/Views/FilterTableView/_FilterTableView.scss
@@ -9,6 +9,7 @@
     margin-top: 0.3rem;
     background: var(--vf-suru-background);
     min-height: 20rem !important;
+    z-index: 103;
   }
 }
 
